[package]
name = "tower-sessions-core"
description = "Core types and traits for tower-sessions."
documentation.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
axum-core = ["dep:axum-core"]
deletion-task = ["tokio/time"]

[dependencies]
async-trait = { workspace = true }
axum-core = { version = "0.5.5", optional = true }
base64 = "0.22.1"
futures = { version = "0.3.31", default-features = false, features = [
  "async-await",
] }
http = "1.4"
parking_lot = "0.12.5"
rand = "0.9"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = { workspace = true }
time = { version = "0.3.44", features = ["serde"] }
tokio = { workspace = true }
tracing = { version = "0.1.44", features = ["log"] }

[dev-dependencies]
tower-sessions = { path = "../", features = ["memory-store"] }
tokio-test = "0.4.4"
tokio = { workspace = true, features = ["rt", "macros"] }
mockall = "0.14.0"
